--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Umbrella BackEnd Server",
   "author": "",
   "license": "MIT",
+  "scripts": {
+    "dev" : "nodemon"
+  },
   "devDependencies": {
     "@babel/cli": "^7.20.7",
     "@babel/core": "^7.20.12",
@@ -13,6 +16,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "ws": "^8.12.0"
   }
 }
